# debian-lsp

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  ale-debian-lsp.vim  control  test_control
.github/: dependabot.yml
.github/workflows/: ci.yml  publish-vscode.yaml  publish.yaml  test.yml
coc-debian/: .npmignore  README.md  jest.config.js  package-lock.json  package.json  tsconfig.json
coc-debian/src/: index.ts  test.ts
debian/: changelog  control  copyright  debian-lsp.1  debian-lsp.metainfo.xml  install  manpages  rules  watch
emacs-lspconfig/: README.md
helix-lspconfig/: README.md
nvim-lspconfig/: README.md
nvim-lspconfig/lsp/: debian_lsp.lua
src/: architecture.rs  bugs.rs  distros.rs  file_links.rs  links.rs  lintian_brush.rs  lsp_integration_tests.rs  main.rs  maintainers.rs  package_cache.rs  phase.rs  popcon.rs  position.rs  rdeps.rs  source_scan.rs  udd.rs  vcswatch.rs  workspace.rs
src/bugs/: debbugs.rs  launchpad.rs
src/changelog/: actions.rs  bug_cache.rs  completion.rs  detection.rs  document_link.rs  fields.rs  file_refs.rs  folding.rs  hover.rs  inlay_hints.rs  mod.rs  on_type_formatting.rs  selection_range.rs  semantic.rs  spelling.rs  symbols.rs
src/conffiles/: actions.rs  completion.rs  definition.rs  detection.rs  diagnostics.rs  fields.rs  hover.rs  mod.rs  semantic.rs
src/control/: actions.rs  code_lens.rs  completion.rs  definition.rs  detection.rs  diagnostics.rs  fields.rs  hover.rs  inlay_hints.rs  mod.rs  references.rs  relation_completion.rs  rename.rs  semantic.rs  spelling.rs  symbols.rs
src/copyright/: actions.rs  code_lens.rs  completion.rs  definition.rs  detection.rs  document_link.rs  fields.rs  hover.rs  inlay_hints.rs  mod.rs  semantic.rs  spelling.rs  symbols.rs
src/cve/: cache.rs  mod.rs
src/deb822/: completion.rs  document_link.rs  folding.rs  hover.rs  mod.rs  on_type_formatting.rs  selection_range.rs  semantic.rs
src/debcargo/: completion.rs  detection.rs  fields.rs  hover.rs  mod.rs  semantic.rs
src/debhelper/: actions.rs  completion.rs  detection.rs  diagnostics.rs  mod.rs  parser.rs  semantic.rs  source.rs
src/debhelper/clean/: completion.rs  detection.rs  mod.rs
src/debhelper/dirs/: actions.rs  completion.rs  detection.rs  diagnostics.rs  mod.rs
src/debhelper/docs/: completion.rs  detection.rs  mod.rs
src/debhelper/examples/: completion.rs  detection.rs  mod.rs
src/debhelper/info/: completion.rs  detection.rs  mod.rs
src/debhelper/install/: actions.rs  completion.rs  detection.rs  diagnostics.rs  mod.rs
src/debhelper/links/: completion.rs  detection.rs  mod.rs
src/debhelper/manpages/: completion.rs  detection.rs  mod.rs
src/debhelper/not_installed/: completion.rs  detection.rs  mod.rs
src/debhelper/triggers/: completion.rs  detection.rs  mod.rs
src/debian_workspace/: changelog_edits.rs  deb822_edits.rs  format_edits.rs  mod.rs  translate.rs  triggers.rs  workspace.rs
src/dep3/: completion.rs  detection.rs  diagnostics.rs  fields.rs  hover.rs  mod.rs  parsing.rs  semantic.rs  spelling.rs  symbols.rs
src/ghsa/: mod.rs
src/lintian_brush/: changelog_edits.rs  deb822_edits.rs  fixers.rs  format_edits.rs  mod.rs  overrides.rs  translate.rs  triggers.rs  workspace.rs
src/lintian_overrides/: completion.rs  definition.rs  detection.rs  hover.rs  mod.rs  semantic.rs  tags.rs
src/multiarch_hints/: fixers.rs  hints.rs  mod.rs
src/patches_series/: completion.rs  definition.rs  detection.rs  diagnostics.rs  mod.rs  semantic.rs
src/rules/: completion.rs  debhelper.rs  detection.rs  fields.rs  mod.rs  semantic.rs
src/scip/: README.md  autopkgtest.rs  bug_info.rs  changelog.rs  control.rs  copyright.rs  debcargo.rs  diagnostics.rs  fields.rs  highlight.rs  indexer.rs  linetable.rs  links.rs  mod.rs  patches.rs  rules.rs  source_format.rs  source_options.rs  symbols.rs  tests.rs  upstream_metadata.rs  watch.rs
src/source_format/: completion.rs  detection.rs  fields.rs  mod.rs
src/source_options/: completion.rs  detection.rs  fields.rs  hover.rs  mod.rs  selection_range.rs  semantic.rs
src/spelling/: comments.rs  deb822.rs  dict.rs  mod.rs
src/tests/: completion.rs  definition.rs  detection.rs  document_link.rs  fields.rs  hover.rs  mod.rs  resolve.rs  semantic.rs
src/upstream_metadata/: completion.rs  detection.rs  document_link.rs  fields.rs  hover.rs  mod.rs  on_type_formatting.rs  semantic.rs  upstream_cache.rs
src/watch/: completion.rs  detection.rs  fields.rs  folding.rs  hover.rs  inlay_hints.rs  mod.rs  selection_range.rs  semantic.rs
vscode-debian/: .vscodeignore  README.md  language-configuration.json  package-lock.json  package.json  publishing.md
vscode-debian/src/: extension.ts
zed-debian/: Cargo.toml  extension.toml
zed-debian/languages/debcontrol/: config.toml
zed-debian/src/: lib.rs
