[package]
name = "debian-lsp"
version = "0.1.4"
edition = "2021"
authors = ["Jelmer Vernooĳ <jelmer@debian.org>"]
description = "Language Server Protocol implementation for Debian control files with field completion, diagnostics, and quickfixes"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jelmer/debian-lsp"
keywords = ["lsp", "debian", "control", "language-server"]
categories = ["development-tools", "text-editors"]

[dependencies]
# debian-analyzer = "0.159.0"
async-trait = "0.1"
chrono = "0.4"
debian-changelog = "0.2.15"
debian-control = { version = "0.3.3" }
debian-copyright = { version = "0.1.43", features = ["lossless"] }
debian-watch = { version = "0.4.6", features = ["linebased", "deb822"] }
distro-info = "0.4"
rowan = "0.16.1"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"] }
makefile-lossless = "0.3.29"
deb822-fast = "0.2"
deb822-lossless = { version = "0.5.12" }
yaml-edit = { version = "0.2.0" }
tower-lsp-server = "0.23"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
salsa = ">=0.23, <0.27"
text-size = "1.1"

[dev-dependencies]
tokio-test = "0.4"
tower = "0.5"
tower-service = "0.3"

[[bin]]
name = "debian-lsp"
test = true
