[package]
name = "debian-lsp"
version = "0.1.9"
edition = "2021"
authors = ["Jelmer Vernooĳ <jelmer@debian.org>"]
description = "Language Server Protocol implementation for Debian control files with field completion, diagnostics, and quickfixes"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jelmer/debian-lsp"
keywords = ["lsp", "debian", "control", "language-server"]
categories = ["development-tools", "text-editors"]
include = ["ale-debian-lsp.vim", "emacs-lspconfig/README.md", "helix-lspconfig/README.md", "nvim-lspconfig/README.md", "src/**", "tests/**", "examples/**", "Cargo.toml", "README.md", "nvim-lspconfig/README.md", "nvim-lspconfig/lsp/debian_lsp.lua"]

[features]
default = ["launchpad"]
launchpad = ["dep:launchpadlib"]
openssl-vendored = ["dep:openssl"]
# Generic adapter from our salsa workspace to the `debian-workspace`
# crate's `Workspace` trait, plus the action-plan -> LSP-edit translator.
# Required by detector hosts (lintian-brush, multiarch-hints, ...) but
# carries no detector code itself, so it's cheap to enable on its own.
debian-workspace = ["dep:debian-workspace"]
# Surfaces migrated lintian-brush fixers as code actions. Pulls in the
# full lintian-brush dependency tree (pyo3, breezyshim, sqlx, sequoia,
# ...); leave it off if those are unwanted in the server binary.
lintian-brush = ["dep:lintian-brush", "debian-workspace"]
# Surfaces multiarch-hints (https://dedup.debian.net/) as code actions
# on debian/control. Hints are fetched lazily and cached on disk.
multiarch-hints = ["dep:multiarch-hints", "debian-workspace"]

[dependencies]
# debian-analyzer = "0.159.0"
async-trait = "0.1"
chrono = "0.4"
debian-changelog = "0.2.19"
debian-control = { version = "0.3.7" }
debian-copyright = { version = "0.1.47", features = ["lossless"] }
debian-watch = { version = "0.4.10", features = ["linebased", "deb822"] }
dep3 = "0.2.2"
distro-info = "0.4"
rowan = "0.16.1"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"] }
makefile-lossless = "0.3.36"
deb822-fast = "0.2"
lintian-overrides = "0.1.3"
deb822-lossless = { version = "0.5.15" }
yaml-edit = { version = "0.2.0" }
toml_edit = "0.25"
upstream-ontologist = { version = "0.3.17", default-features = false, features = ["cargo", "debian"] }
clap = { version = "4", features = ["derive"] }
futures = "0.3"
tower-lsp-server = "0.23"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
salsa = ">=0.23, <0.27"
text-size = "1.1"
patchkit = "0.2.4"
launchpadlib = { version = "0.5.7", optional = true, default-features = false, features = ["async", "api-v1_0", "bugs", "packages"] }
lru = ">=0.12,<0.19"
openssl = { version = ">=0.10.64, <0.11", features = ["vendored"], optional = true }
lintian-brush = { version = "0.176", optional = true }
multiarch-hints = { version = "0.176", default-features = false, features = ["async"], optional = true }
debian-workspace = { version = "0.1", optional = true }

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
tower = { version = "0.5", features = ["util"] }
tower-service = "0.3"
tower-test = "0.4"

[[bin]]
name = "debian-lsp"
test = true

# Local development against in-tree multiarch-hints with the unpublished
# `async` feature. The matching `debian-workspace` patch keeps a single
# version of that crate in the graph — without it, the registry copy
# (pulled in via `lintian-brush` and our own dep) clashes with the
# path copy that multiarch-hints sees, producing "expected ActionPlan,
# found ActionPlan" type errors. Drop both once the new feature ships.
[patch.crates-io]
multiarch-hints = { path = "../debian-codemods/multiarch-hints" }
debian-workspace = { path = "../debian-codemods/debian-workspace" }
