[package]
name = "debian-lsp"
version = "0.1.10"
edition = "2021"
authors = ["Jelmer Vernooĳ <jelmer@debian.org>"]
description = "Language Server Protocol implementation for Debian control files with field completion, diagnostics, and quickfixes"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jelmer/debian-lsp"
keywords = ["lsp", "debian", "control", "language-server"]
categories = ["development-tools", "text-editors"]
include = ["ale-debian-lsp.vim", "emacs-lspconfig/README.md", "helix-lspconfig/README.md", "nvim-lspconfig/README.md", "src/**", "tests/**", "examples/**", "Cargo.toml", "README.md", "nvim-lspconfig/README.md", "nvim-lspconfig/lsp/debian_lsp.lua"]

[features]
default = ["launchpad", "spellcheck"]
launchpad = ["dep:launchpadlib"]
spellcheck = ["dep:typos", "dep:typos-dict", "dep:unicase"]
openssl-vendored = ["dep:openssl"]
lintian-brush = ["dep:lintian-brush", "dep:debian-workspace"]
multiarch-hints = ["dep:multiarch-hints", "dep:debian-workspace"]

[dependencies]
# debian-analyzer = "0.159.0"
async-trait = "0.1"
chrono = "0.4"
debian-changelog = "0.2.19"
debian-control = { version = "0.3.7" }
debian-copyright = { version = "0.1.47", features = ["lossless"] }
debian-watch = { version = "0.4.10", features = ["linebased", "deb822"] }
dep3 = "0.2.2"
distro-info = "0.4"
rowan = "0.16.1"
sqlx = { version = "0.9", features = ["runtime-tokio", "postgres"] }
makefile-lossless = "0.3.36"
deb822-fast = "0.2"
lintian-overrides = "0.1.3"
deb822-lossless = { version = "0.5.15" }
yaml-edit = { version = "0.2.0" }
toml_edit = "0.25"
upstream-ontologist = { version = "0.3.17", default-features = false, features = ["cargo", "debian"] }
clap = { version = "4", features = ["derive"] }
futures = "0.3"
tower-lsp-server = "0.23"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
salsa = ">=0.23, <0.27"
text-size = "1.1"
patchkit = "0.3.0"
launchpadlib = { version = "0.5.7", optional = true, default-features = false, features = ["async", "api-v1_0", "bugs", "packages"] }
lru = ">=0.12,<0.19"
openssl = { version = ">=0.10.64, <0.11", features = ["vendored"], optional = true }
lintian-brush = { version = "0.180", optional = true }
multiarch-hints = { version = "0.180", default-features = false, features = ["async"], optional = true }
debian-workspace = { version = "0.180", optional = true }
typos = { version = "0.10", optional = true }
typos-dict = { version = "0.13", optional = true }
unicase = { version = "2.9", optional = true }

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
tower = { version = "0.5", features = ["util"] }
tower-service = "0.3"
tower-test = "0.4"

[[bin]]
name = "debian-lsp"
test = true
